tests/ui/repr/repr-align-assign.stderr
error[E0539]: malformed `repr` attribute input
  --> $DIR/repr-align-assign.rs:3:1
   |
LL | #[repr(align=8)]
   | ^^^^^^^^^^^^--^^
   |             |
   |             expected this to be a list
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>

error[E0539]: malformed `repr` attribute input
  --> $DIR/repr-align-assign.rs:6:1
   |
LL | #[repr(align="8")]
   | ^^^^^^^^^^^^----^^
   |             |
   |             expected this to be a list
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html#representations>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0539`.
